--- a/index.html
+++ b/index.html
@@ -1,11 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>Web Landing Full</title>
-</head>
-<body>
-    <h1>Web Landing Full</h1>
-</body>
+  </head>
+  <body>
+    <div class="">
+      <header>
+        <picture>
+          <img src="./assets/logo.svg" alt="Logo" />
+        </picture>
+        <nav>
+          <ul>
+            <li><a href="">EMPRESA</a></li>
+            <li><a href="">SERVICIOS</a></li>
+            <li><a href="">NUESTROS TRABAJOS</a></li>
+            <li><a href="">HACE TU CONSULTA</a></li>
+          </ul>
+        </nav>
+      </header>
+      <div class="relative">
+        <div id="carouselExampleCaptions" class="carousel slide">
+          <div class="carousel-indicators">
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="0"
+              class="active"
+              aria-current="true"
+              aria-label="Slide 1"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="1"
+              aria-label="Slide 2"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="2"
+              aria-label="Slide 3"
+            ></button>
+            <button
+              type="button"
+              data-bs-target="#carouselExampleCaptions"
+              data-bs-slide-to="3"
+              aria-label="Slide 4"
+            ></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img
+                src="assets/banner/bannerphoto1.svg"
+                class="d-block w-100 byn"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block"></div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/banner/bannerphoto2.svg"
+                class="d-block w-100 byn"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block"></div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/banner/bannerphoto3.png"
+                class="d-block w-100 byn"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block"></div>
+            </div>
+            <div class="carousel-item">
+              <img
+                src="assets/banner/bannerphoto4.svg"
+                class="d-block w-100 byn"
+                alt="..."
+              />
+              <div class="carousel-caption d-none d-md-block"></div>
+            </div>
+          </div>
+          <button
+            class="carousel-control-prev"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="prev"
+          >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button
+            class="carousel-control-next"
+            type="button"
+            data-bs-target="#carouselExampleCaptions"
+            data-bs-slide="next"
+          >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
+        <div class="absolute">
+          <h1 class="text-white">Soluciones para la construccion en seco</h1>
+          <div class="botones gap-3">
+            <button class="btn boton">NUESTROS SERVICIOS</button>
+            <button class="btn botonbg">PEDI PRESUPUESTO</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <main>
+      <article class="py-5">
+        <section class="row">
+          <h2 class="col-12 text-center title">EMPRESA</h2>
+          <p class="col-6 ps-4">
+            Punto Placa es una empresa con más de 10 años en el rubro de la
+            construcción en seca, especializándonos en las técnicas de Still
+            Framing y Dry Wall. Ofrecemos soluciones integrales que van desde el
+            planeamiento, diseño y construcción de espacios de vivienda y
+            laborales: hasta la venta de insumos y el asesoramientos a
+            colocadores y particulares.
+          </p>
+          <p class="col-6">
+            Trabajamos con el objetivo puesto en estar siempre capacitados en
+            las nuevas tendencias que emergen en el mercado de la construcción y
+            en brindar soluciones realmente duraderas a todos aquellos que nos
+            consultan y/o contratan nuestro servicio. Nuestra mayor fortaleza
+            reside en la mirada estratègica que poseemos, gracias a nuestra
+            experiencia y trayectoria
+          </p>
+        </section>
+      </article>
+    </main>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
