Se termina layout

--- a/index.html
+++ b/index.html
@@ -112,19 +112,21 @@
         </div>
 
         <div class="absolute">
-          <h1 class="text-white">Soluciones para la construccion en seco</h1>
-          <div class="botones gap-3">
+          <h1 class="text-white">
+            SOLUCIONES<br />PARA LA CONSTRUCCION EN SECO
+          </h1>
+          <div class="botones d-flex justify-content-around mt-4">
             <button class="btn boton">NUESTROS SERVICIOS</button>
             <button class="btn botonbg">PEDI PRESUPUESTO</button>
           </div>
         </div>
       </div>
     </div>
-    <main>
+    <main class="container-fluid">
       <article class="py-5">
         <section class="row">
           <h2 class="col-12 text-center title">EMPRESA</h2>
-          <p class="col-6 ps-4">
+          <p class="col-6">
             Punto Placa es una empresa con más de 10 años en el rubro de la
             construcción en seca, especializándonos en las técnicas de Still
             Framing y Dry Wall. Ofrecemos soluciones integrales que van desde el
@@ -143,6 +145,153 @@
         </section>
       </article>
     </main>
+    <article class="relative bg-secondary mb-5">
+      <section class="background"></section>
+      <div class="anuncio">
+        <h2 class="text-white">Servicios</h2>
+        <p class="text-white">
+          Trabajamos con el objetivo puesto en estar siempre capacitados en las
+          nuevas tendencias que emergen en el mercado de la construcción.
+        </p>
+      </div>
+      <div class="cartelera d-flex flex-column w-25">
+        <h3 class="mb-3 text-center">Venta de materiales</h3>
+        <p class="text-center">
+          Contamos con una muy variada plataforma de articulos y atención
+          personalizada para garantizar el asesoramiento correcto además de una
+          dedicada actitud de servicio. Comercializarmos y prestamos un servicio
+          integral para nuestros clientes, tanto en obras desde cero, como en
+          ampliaciones y reciclajes.
+        </p>
+      </div>
+      <div class="cartelera2 d-flex flex-column w-25">
+        <h3 class="mb-3 text-center">Drywall</h3>
+        <p class="text-center">
+          Es un moderno sistema constructive para viviendas. Es una estructura
+          de perfiles, rieles y parantes de acero galvanizado, con los cuales se
+          construyen forman muros portantes, interiores y exteriores, entrepisos
+          tachumbres, muros defachada muros divisarios, entre otros.
+        </p>
+      </div>
+      <div class="cartelera3 d-flex flex-column w-25">
+        <h3 class="mb-3 text-center">Stell Framing</h3>
+        <p class="text-center">
+          Es un sistema constructivo en el cual la estructura resistente está
+          compuesta por perfiles de chapa de acero estructural galvanizado de
+          muy bajo espesor, junto a una cantidad de componentes o sub-sistemas
+          funcionando como un conjunto. Su característica es el montaje en seco.
+        </p>
+      </div>
+    </article>
+    <div class="clearfix"></div>
+    <div class="mb-5">
+      <h2 class="text-center galeriatext title">Galería/Trabajos</h2>
+      <div class="grid-layout">
+        <div class="caja c1">
+          <img
+            src="assets/galeria/image 17.png"
+            alt="foto_galeria"
+            class="img-fuid"
+          />
+        </div>
+        <div class="caja c2">
+          <img
+            src="assets/galeria/image 18.png"
+            alt="foto_galeria"
+            class="img-fuid"
+          />
+        </div>
+        <div class="caja c3">
+          <img
+            src="assets/galeria/image 19.png"
+            alt="foto_galeria"
+            class="img-fuid"
+          />
+        </div>
+        <div class="caja c4">
+          <img
+            src="assets/galeria/image 14.png"
+            alt="foto_galeria"
+            class="img-fuid"
+          />
+        </div>
+        <div class="caja c5">
+          <img
+            src="assets/galeria/image 16.png"
+            alt="foto_galeria"
+            class="img-fuid"
+          />
+        </div>
+        <div class="caja c6">
+          <img
+            src="assets/galeria/image 15.png"
+            alt="foto_galeria"
+            class="img-fuid"
+          />
+        </div>
+        <div class="caja c7">
+          <img
+            src="assets/galeria/image 21.png"
+            alt="foto_galeria"
+            class="img-fuid"
+          />
+        </div>
+        <div class="caja c8">
+          <img
+            src="assets/galeria/image 12.png"
+            alt="foto_galeria"
+            class="img-fuid"
+          />
+        </div>
+        <div class="caja c9">
+          <img
+            src="assets/galeria/image 20.png"
+            alt="foto_galeria"
+            class="img-fuid"
+          />
+        </div>
+      </div>
+    </div>
+    <h2 class="text-center galeriatext title my-4">Hacé tu consulta</h2>
+    <div class="container-fluid">  
+
+      <article class=" ps-4 row">
+        <section class="col-12 col-sm-6">
+          <form action="">
+            <div class="d-flex flex-column">
+              <label for="nombreyapellido">Nombre y Apellido</label>
+              <input type="text" required />
+            </div>
+            <div class="d-flex flex-column">
+              <label for="email">Email</label>
+              <input type="email" required />
+            </div>
+            <div class="d-flex flex-column">
+              <label for="telefono">Telefono</label>
+              <input type="number" />
+            </div>
+            <div class="d-flex flex-column">
+              <label for="mensaje">Mensaje</label>
+              <textarea name="" id="" cols="30" rows="5"></textarea>
+            </div>
+            <button type="submit" class="mt-3 botonbg border">Enviar</button>
+          </form>
+        </section>
+        <section class="col-12 col-sm-6">
+          <p>IMPORTANTE: Para asesorarte mejor, te sugerimos que no olvides incluir las medidas del espacio a cotizar indicando ancho, alto y profundidad. También, podés agregar fotos para ilustrar mejor tu consulta.</p>
+          <ul>
+            <li>ventas@ventas.com.ar</li>
+            <li>11227 48608</li>
+            <li>11227-48608</li>
+            <li>Lunes a viernes de 8 a 17 hs. | Sábados de 8 a 13 hs.</li>
+            <li>Capital, Bs As, Argentina.</li>
+          </ul>
+        </section>
+      </article>
+      <footer class="bg-dark mt-3 row">
+        <p class="text-white text-center py-2">Copyright © 2023 by Destino Web</p>
+      </footer>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
