--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <header>
       <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container-fluid">
-          <a href="#"><img src="/assets/logo.svg" alt="Logo" /></a>
+          <a href="#"><img src="/assets/logo.svg" alt="Logo"  style="border: none;"/></a>
           <button
             class="navbar-toggler"
             type="button"
@@ -205,7 +205,7 @@
       </article>
     </main>
     <a name="servicio"></a>
-    <article class="mb-5">
+    <article class="">
       <div class="fondo_servicios">
         <div class="anuncio">
           <h2 class="title text-white mt-4 title_service">Servicios</h2>
@@ -248,6 +248,7 @@
               característica es el montaje en seco.
             </p>
           </div>
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="forma"><path fill="#fff" fill-opacity="1" d="M0,32L720,256L1440,0L1440,320L720,320L0,320Z"></path></svg>
         </div>
       </div>
     </article>
@@ -255,7 +256,7 @@
     <!-- <div class="clearfix"></div> -->
     <a name="trabajos"></a>
 
-    <div class="container-fluid my-5">
+    <div class="container">
       <h2 class="galeriatext title text-center">Galería / Trabajos</h2>
       <div class="grid-layout">
         <div class="caja c1">
@@ -325,31 +326,31 @@
     </div>
     <a name="consulta"></a>
 
-    <h2 class="text-center galeriatext title my-4">Hacé tu consulta</h2>
+    <h2 class="text-center galeriatext title mt-4">Hacé tu consulta</h2>
     <div class="container-fluid">
       <article class="ps-4 row">
-        <section class="col-6 col-sm-6">
+        <section class="col-6">
           <form action="">
-            <div class="d-flex flex-column">
-              <label for="nombreyapellido">Nombre y Apellido</label>
+            <div class="d-flex flex-column gap-2">
+              <label for="nombreyapellido" class="fw-semibold mb-1">Nombre y Apellido</label>
               <input type="text" required />
             </div>
             <div class="d-flex flex-column">
-              <label for="email">Email</label>
+              <label for="email"  class="fw-semibold mb-1">Email</label>
               <input type="email" required />
             </div>
             <div class="d-flex flex-column">
-              <label for="telefono">Telefono</label>
+              <label for="telefono"  class="fw-semibold mb-1">Telefono</label>
               <input type="number" />
             </div>
             <div class="d-flex flex-column">
-              <label for="mensaje">Mensaje</label>
+              <label for="mensaje"  class="fw-semibold mb-1">Mensaje</label>
               <textarea name="" id="" cols="30" rows="5"></textarea>
             </div>
             <button type="submit" class="mt-3 botonbg border">Enviar</button>
           </form>
         </section>
-        <section class="col-6 col-sm-6">
+        <section class="col-6">
           <p class="text_cartelera">
             IMPORTANTE: Para asesorarte mejor, te sugerimos que no olvides
             incluir las medidas del espacio a cotizar indicando ancho, alto y
