--- a/index.html
+++ b/index.html
@@ -260,35 +260,35 @@
     <!-- <div class="clearfix"></div> -->
     <a name="trabajos"></a>
 
-    <div class="container">
+    <div class="container galeria-cuadro">
       <h2 class="galeriatext title text-center">Galería / Trabajos</h2>
       <div class="grid-layout">
         <div class="caja c1">
           <img
             src="assets/galeria/image 21.png"
             alt="foto_galeria"
-            class="img-fuid"
+            class="img-fluid"
           />
         </div>
         <div class="caja c2">
           <img
             src="assets/galeria/image 12.png"
             alt="foto_galeria"
-            class="img-fuid"
+            class="img-fluid"
           />
         </div>
         <div class="caja c3">
           <img
             src="assets/galeria/image 19.png"
             alt="foto_galeria"
-            class="img-fuid"
+            class="img-fluid"
           />
         </div>
         <div class="caja c4">
           <img
             src="assets/galeria/image 14.png"
             alt="foto_galeria"
-            class="img-fuid"
+            class="img-fluid"
           />
         </div>
         <div class="caja c5">
@@ -302,28 +302,28 @@
           <img
             src="assets/galeria/image 15.png"
             alt="foto_galeria"
-            class="img-fuid"
+            class="img-fluid"
           />
         </div>
         <div class="caja c7">
           <img
             src="assets/galeria/image 21.png"
             alt="foto_galeria"
-            class="img-fuid"
+            class="img-fluid"
           />
         </div>
         <div class="caja c8">
           <img
             src="assets/galeria/image 12.png"
             alt="foto_galeria"
-            class="img-fuid"
+            class="img-fluid"
           />
         </div>
         <div class="caja c9">
           <img
             src="assets/galeria/image 20.png"
             alt="foto_galeria"
-            class="img-fuid"
+            class="img-fluid"
           />
         </div>
       </div>
@@ -331,7 +331,7 @@
     <a name="consulta"></a>
 
     <h2 class="text-center galeriatext title mt-4">Hacé tu consulta</h2>
-    <div class="container-fluid">
+    <div class="container-fluid ">
       <article class="ps-4 row">
         <section class="col-5">
           <form action="">
