modelo responsive ok

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     
     <a name="servicio"></a>
    
-    <article class="">
+    <article class="service">
       <div class="fondo_servicios">
         <div class="anuncio">
           <h2 class="title text-white mt-4 title_service">Servicios</h2>
@@ -252,15 +252,15 @@
               característica es el montaje en seco.
             </p>
           </div>
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="forma"><path fill="#fff" fill-opacity="1" d="M0,32L720,256L1440,0L1440,320L720,320L0,320Z"></path></svg>
+          <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="forma"><path fill="#fff" fill-opacity="1" d="M0,32L720,256L1440,0L1440,320L720,320L0,320Z"></path></svg> -->
         </div>
       </div>
     </article>
 
-    <!-- <div class="clearfix"></div> -->
+    <div class="clearfix"></div>
     <a name="trabajos"></a>
 
-    <div class="container galeria-cuadro">
+    <div class="container contenedor_grid">
       <h2 class="galeriatext title text-center">Galería / Trabajos</h2>
       <div class="grid-layout">
         <div class="caja c1">
@@ -333,7 +333,7 @@
     <h2 class="text-center galeriatext title mt-4">Hacé tu consulta</h2>
     <div class="container-fluid ">
       <article class="ps-4 row">
-        <section class="col-5">
+        <section class="col-12 col-sm-5">
           <form action="">
             <div class="d-flex flex-column gap-2">
               <label for="nombreyapellido" class="fw-semibold mb-1">Nombre y Apellido</label>
@@ -354,37 +354,37 @@
             <button type="submit" class="mt-3 botonbg border">Enviar</button>
           </form>
         </section>
-        <section class="col-7 mt-5 text-center">
-          <p class="text_cartelera">
+        <section class="col-12 col-sm-7 mt-4">
+          <p class="fs-6">
             IMPORTANTE: Para asesorarte mejor, te sugerimos que no olvides
             incluir las medidas del espacio a cotizar indicando ancho, alto y
             profundidad. También, podés agregar fotos para ilustrar mejor tu
             consulta.
           </p>
           <ul class="contac">
-            <li class="text_cartelera">
+            <li class="text_contac">
               <i
                 class="fa-solid fa-envelope fa-xl pe-2 "
                 style="color: #ba0100"
               ></i
               >ventas@ventas.com.ar
             </li>
-            <li class="text_cartelera">
+            <li class="text_contac">
               <i class="fa-solid fa-phone fa-xl pe-3" style="color: #ba0100"></i
               >11227 48608
             </li>
-            <li class="text_cartelera">
+            <li class="text_contac">
               <i
                 class="fa-solid fa-mobile fa-xl pe-3"
                 style="color: #ba0100"
               ></i
               >11227-48608
             </li>
-            <li class="text_cartelera">
+            <li class="text_contac flex flex-wrap">
               <i class="fa-solid fa-clock fa-xl pe-3" style="color: #ba0100"></i
               >Lunes a viernes de 8 a 17 hs. | Sábados de 8 a 13 hs.
             </li>
-            <li class="text_cartelera">
+            <li class="text_contac">
               <i
                 class="fa-solid fa-location-dot fa-xl pe-3"
                 style="color: #ba0100"
