--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
           data-bs-slide="prev"
         >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidde">Previous</span>
+          <span class="visually-hidden">Previous</span>
         </button>
         <button
           class="carousel-control-next"
@@ -166,7 +166,7 @@
           data-bs-slide="next"
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidde">Next</span>
+          <span class="visually-hidden">Next</span>
         </button>
       </div>
 
